# RAG_proj

./: .gitignore  README.md
sustech-rag/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
sustech-rag/configs/: chunking.yaml  evaluation.yaml  generation.yaml  models.yaml  paths.yaml  retrieval.yaml  sources.yaml
sustech-rag/docs/: README.md  ablation_report.md  defense_full_script.md  demo_script.md  experiment_summary.md  final_checklist.md  operations.md  presentation_notes.md  presentation_tables.md  project_report.md  project_report_outline.md  vllm.md
sustech-rag/frontend/: app.py
sustech-rag/scripts/: build_bm25.py  chunk.py  crawl.py  download_models.py  embed.py  env_check.py  evaluate.py  evaluate_generation.py  fetch_api_sources.py  fetch_pdf_sources.py  generate_eval.py  health_check.py  init_dirs.py  normalize.py  parse.py  report_summary.py  run_ablations.py  run_api.sh  run_llm.sh  run_pipeline_core.sh  run_pipeline_small.sh  run_transformers_llm.py  run_ui.sh
sustech-rag/src/sustech_rag/: __init__.py  cli.py
sustech-rag/src/sustech_rag/api/: app.py
sustech-rag/src/sustech_rag/chunking/: chunker.py
sustech-rag/src/sustech_rag/common/: config.py  schema.py  utils.py
sustech-rag/src/sustech_rag/generation/: client.py  rag.py
sustech-rag/src/sustech_rag/indexing/: bm25.py  embeddings.py  qdrant_index.py
sustech-rag/src/sustech_rag/ingestion/: crawler.py
sustech-rag/src/sustech_rag/parsing/: html_parser.py  pdf_parser.py  (+1 more)
sustech-rag/tests/unit/: test_chunker.py  test_fusion.py  test_reranker.py  test_utils.py
(+6 files in other folders)
