[project]
name = "sustech-rag"
version = "0.1.0"
description = "SUSTech campus knowledge-base RAG system with traceable retrieval and evaluation."
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.29",
  "tqdm>=4.66",
]

[project.optional-dependencies]
full = [
  "gradio>=4.44",
  "qdrant-client>=1.10",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "pymupdf>=1.24",
  "trafilatura>=1.9",
  "sentence-transformers>=3.0",
  "modelscope>=1.17",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
sustech-rag = "sustech_rag.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

